# code_review_bot_old

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  README.md  build-lambda.sh  config.yaml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  migrate.Dockerfile  package-lock.json  package.json  server.Dockerfile  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
.circleci/: config.yml
client/js/: githubRepos.js  index.js  setupForm.js  utils.js
client/styles/: styles.css
codereview/: api.go  service.go
db/: db.go  models.go
lang/: index.go
languages/: languages.go
migrations/2019-01-27-210917_create_pull_reqeust/: up.sql
migrations/2019-01-31-220442_add_fields_to_pull_request/: down.sql  up.sql
migrations/2019-02-12-211529_add_text_to_pull_request/: down.sql  up.sql
migrations/2019-08-20-212014_add_users/: up.sql
migrations/2019-08-21-121308_add_timestamps/: down.sql  up.sql
migrations/2019-08-21-145631_add_github_users_and_relationships/: down.sql  up.sql
migrations/2019-10-22-170913_add_github_auth_token_to_user/: down.sql  up.sql
migrations/2019-10-25-155807_create_webhooks/: down.sql  up.sql
migrations/2019-10-31-185404_create_icon_mapping/: down.sql  up.sql
migrations/2019-11-06-165321_add_configs/: up.sql
migrations/2020-06-15-214053_add_slack_username_default/: down.sql  up.sql
migrations/2021-02-26-221355_add_foreign_keys/: down.sql  up.sql
migrations/2021-03-01-154039_add_foreign_key_to_pull_request/: down.sql  up.sql
migrations/2021-03-01-155845_add_foreign_key_to_gh_users/: down.sql  up.sql
pkg/codereview/: api.go  lambda.go  service.go
slack/: info.go  slack.go
src/: error.rs  lib.rs  main.rs  middlewares.rs  models.rs  schema.rs
templates/: index.html  layout.html  setup_layout.html
tests/: integration_test.rs
(+33 files in other folders)
