[package]
name = "code_review_bot"
version = "0.1.0"
authors = ["Joe Jackson <cpmhjoe@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
regex = "1"
lazy_static = "1.2"

actix-web = "1.0"
log = "0.4.0"
env_logger = "0.6.0"
futures = "0.1.25"
failure = "0.1"
failure_derive = "0.1"

reqwest = "=0.9.5"
mockito = "0.14.0"
url = "1.7"

structopt = "0.2"
listenfd = "0.3"
dotenv = "0.13"

diesel = { version = "1.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8"

